# reflection

./: .gitignore  CMakeLists.txt
clang_generator/: CMakeLists.txt  ast_visitor.hpp  main.cpp  main_output.cpp  main_output.hpp
data_types/: CMakeLists.txt  all.cc  reflection.hh  simple_class.cc  simple_class.hh  simple_struct.hh
example_reflected_lib/: CMakeLists.txt  enums.cpp  enums.hpp
generator/: generator.py  reflection_generator.py
redist/cmake/: Findreflection_generator.cmake
reflection_generator/: main.cpp  main_output.hpp
tests/: CMakeLists.txt  main.cpp
usage_examples/: CMakeLists.txt  main.cc  sql_generator.hh
usage_examples/fully_qualified_name/: CMakeLists.txt  fully_qualified_name_builder.hh  main.cc
usage_examples/qt_meta_object/: CMakeLists.txt  main.cc  meta_object.hh  meta_object_impl.hh
usage_examples/sql_generator/: CMakeLists.txt  main.cc
